fix overflowing text inputs

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -741,6 +741,7 @@ input[type="checkbox"] {
 }
 
 input[type=text] {
+	box-sizing: border-box;
 	margin-bottom: 10px;
 }
 
